--- a/html-css-1.html
+++ b/html-css-1.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+
+    <link rel="stylesheet" href="style.css">
     
+</head>
+
+<body>
+    <div>
+        <div>
+           <div class="clas"><img src="./img/logo.svg" alt="logo" class="classe"></div>
+
+            <h2>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h2>
+                <div><span>Scritto da The Booleaner</span></div>
+        </div>
+
+    </div>
+
 </body>
 </html>
