ADD rinominato le classi, portato avanti fino alla lista

--- a/html-css-1.html
+++ b/html-css-1.html
@@ -11,12 +11,51 @@
 
 <body>
     <div>
-        <div>
-           <div class="clas"><img src="./img/logo.svg" alt="logo" class="classe"></div>
+        <div class="colore"><img src="./img/logo.svg" alt="logo" class="grandezza"></div>
 
-            <h2>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h2>
-                <div><span>Scritto da The Booleaner</span></div>
+             <h2>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h2>
+                <div>Scritto da The Booleaner</div>
+                <div>il 10/10/2020</div>
+        
+        <div class="immagini">
+            <img src="./img/tim-1.jpg" alt="Foto tim 1">
+            <img src="./img/tim-2.jpg" alt="Foto tim 2">
         </div>
+
+        <div>1st Photo: john S. and James L. knight Foundations, by Scott Henrichsen</div>
+        <div>2nd Photo: Wikipedia, by Paul Clarke</div>
+        
+        <br>
+
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+
+                <span class="evidenzia"> Magnam quam non mollitia, rem sapiente assumenda, 
+                voluptatibus pariatur dicta qui accusantium ut unde perferendis molestiae.
+                </span>
+
+            Eligendi maxime facilis placeat labore error!
+        </div>
+
+        <ul>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex voluptates totam 
+                mollitia fuga, at deleniti expedita recusandae, beatae reiciendis illum neque quo 
+                inventore dicta blanditiis veniam delectus corporis aliquid accusantium.
+            </li>
+
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus fugiat porro officia omnis
+                 vero sunt similique enim, ducimus ipsa modi. Nemo aut, suscipit illo quaerat impedit repellendus 
+                 quidem deserunt quibusdam.
+            </li>
+
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur aut culpa veritatis in. 
+                Suscipit animi eaque rerum vitae iure facilis doloremque. Veniam, a voluptatibus non laborum 
+                dolorem recusandae quibusdam reprehenderit.
+            </li>
+        </ul>
 
     </div>
 
