--- a/index.html
+++ b/index.html
@@ -57,6 +57,33 @@
             </li>
         </ul>
 
+            <table>
+
+                    <tr class="blu">
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th class="align">Lorem ipsum dolor</th>
+                    </tr>               
+
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
+                    </tr>
+                               
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
+                    </tr>
+                
+            </table>
     </div>
 
 </body>
