ADD fix tabella

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <th class="align">Lorem ipsum dolor</th>
                     </tr>               
 
-                    <tr>
+                    <tr class="azzurro">
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
@@ -77,7 +77,7 @@
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
                     </tr>
                                
-                    <tr>
+                    <tr class="azzurro">
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, expedita?</td>
