REFACT migliore evidenziature

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 
-                <span class="evidenzia"> Magnam quam non mollitia, rem sapiente assumenda, 
+                <mark>Magnam quam non mollitia, rem sapiente assumenda, 
                 voluptatibus pariatur dicta qui accusantium ut unde perferendis molestiae.
-                </span>
+                </mark>
 
             Eligendi maxime facilis placeat labore error!
         </div>
