ADD img con sopra text

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                     </tr>
                 
             </table>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore explicabo quisquam harum quam magni deleniti
+                 repellat tempora, <mark>voluptas quos impedit consectetur dolor sit voluptates.</mark></p>
+
+        <h4>Potrebbe interessarti</h4>
+
+            <h3>Lorem ipsum dolor</h3>
+            <h3>Lorem ipsum dolor</h3>
     </div>
 
 </body>
